--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
         <dependency>
             <groupId>org.antlr</groupId>
-            <artifactId>antlr4-runtime</artifactId>
-            <version>4.10</version>
+            <artifactId>antlr4</artifactId>
+            <version>4.12.0</version>
         </dependency>
     </dependencies>
 </project>
